# magnus

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/core/: application.rs  core_macros.rs  entry_point.rs  layers.rs  mod.rs  object.rs  settings.rs  signals.rs  window.rs
src/core/graphics/: context.rs  directx.rs  mod.rs  opengl.rs  vulkan.rs
src/core/window/: linux.rs  mod.rs  win32.rs
src/events/: application_event.rs  application_events.rs  event.rs  key_event.rs  key_events.rs  mod.rs  mouse_event.rs  mouse_events.rs  render_events.rs  window_events.rs
